# AI-Wortkflow-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  smoke_test.py
app/: errors.py
app/api/: admin_routes.py  request_routes.py  schemas.py  user_routes.py
app/core/: config.py  logger.py  prompts.py  redis_client.py
app/db/: database.py
app/models/: __init__.py  request.py  user.py
app/services/: ai_service.py  common_service.py  ingestion_service.py  processing_service.py  user_service.py
app/templates/email/: action.html
app/workers/: tasks.py
migrations/versions/: 08719b97d34a_add_cascade_on_delete.py  8be75cfe2c5d_add_columns_to_foto_requests.py  e97877277441_initial_migration.py
tests/: conftest.py
tests/integration/: test_request_routes.py  test_user_routes.py
tests/unit/: test_ingestion_service.py  test_processing_service.py
