[project]
name = "ai-workflow-assistant"
version = "0.1.0"
description = "Assistente Ai per gestione mail aziendale"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "flask-smorest",
    "flask-sqlalchemy",
    "python-dotenv",
    "sqlalchemy",
    "flask-jwt-extended",
    "redis",
    "passlib",
    "flask-migrate",
    "psycopg2-binary",
    "requests",
    "google-genai",
    "rq"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-flask",
    "pytest-cov",
]

[tool.pytest.ini_options]
# Pytest cerca i test nella cartella "tests/"
testpaths = ["tests"]
# Mostra print() nei test che falliscono
log_cli = true
log_cli_level = "WARNING"
