[project]
name = "ai-workflow-assistant"
version = "0.1.0"
description = "Assistente Ai per gestione mail aziendale"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "flask-smorest",
    "flask-sqlalchemy",
    "python-dotenv",
    "sqlalchemy",
    "flask-jwt-extended",
    "redis",
    "passlib",
    "flask-migrate",
    "psycopg2-binary",
    "requests",
    "google-genai",
    "rq",
    "flask-limiter[redis]",
    "python-magic",
    "flask-cors",
    "jinja2",
    "gunicorn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-flask",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "WARNING"